--- a/CalHacks2019/Base.lproj/Main.storyboard
+++ b/CalHacks2019/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait" appearance="light"/>
+    <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,11 +12,11 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="HomeViewController" customModule="CalHacks2019" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Today's Word Is:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AEJ-zz-6xs">
-                                <rect key="frame" x="27" y="47" width="321" height="36"/>
+                                <rect key="frame" x="27" y="47" width="360" height="36"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="36" id="SoX-AP-4Be"/>
                                 </constraints>
@@ -24,17 +24,17 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="placeholder" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ouR-jB-n8k">
-                                <rect key="frame" x="40" y="93" width="294" height="36"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="placeholder" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ouR-jB-n8k">
+                                <rect key="frame" x="38" y="87" width="333" height="54"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="36" id="352-yn-cKh"/>
+                                    <constraint firstAttribute="height" constant="54" id="352-yn-cKh"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="35"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score: 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mzD-Wd-r84">
-                                <rect key="frame" x="16" y="611" width="112" height="42"/>
+                                <rect key="frame" x="16" y="680" width="112" height="42"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="42" id="Bak-SN-yCH"/>
                                     <constraint firstAttribute="width" constant="112" id="nYy-wG-LcK"/>
@@ -43,19 +43,14 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DW8-4C-luV">
-                                <rect key="frame" x="40" y="148" width="294" height="306"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="306" id="WZF-vr-ds0"/>
-                                </constraints>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Ie-q7-TIQ">
-                                <rect key="frame" x="251" y="617" width="97" height="30"/>
+                                <rect key="frame" x="290" y="686" width="97" height="30"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="Yyy-dn-PXY"/>
                                     <constraint firstAttribute="width" constant="97" id="ir7-KA-OwX"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <state key="normal" title="Reset Game">
                                     <color key="titleColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <color key="titleShadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -65,9 +60,11 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WqC-R7-2oW">
-                                <rect key="frame" x="133" y="481" width="108" height="109"/>
+                                <rect key="frame" x="145" y="559" width="125" height="125"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="WqC-R7-2oW" secondAttribute="height" multiplier="1:1" constant="-1" id="7sC-X8-rqv"/>
+                                    <constraint firstAttribute="width" secondItem="WqC-R7-2oW" secondAttribute="height" multiplier="1:1" id="A6H-Lr-jrt"/>
+                                    <constraint firstAttribute="width" constant="125" id="oQS-bg-FdL"/>
+                                    <constraint firstAttribute="height" constant="125" id="q32-bE-ddw"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                 <state key="normal" image="hiclipart-camera"/>
@@ -75,26 +72,43 @@
                                     <action selector="takePhoto:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Z5t-MM-cDE"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Try taking your own picture!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="13" translatesAutoresizingMaskIntoConstraints="NO" id="pvR-94-BNy">
+                                <rect key="frame" x="35" y="500" width="343" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="343" id="Hzf-Zj-Hnt"/>
+                                    <constraint firstAttribute="height" constant="34" id="tfS-Ua-3gj"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="25"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DW8-4C-luV">
+                                <rect key="frame" x="41" y="160" width="333" height="306"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="AEJ-zz-6xs" secondAttribute="trailing" constant="27" id="0zf-8Z-aaH"/>
-                            <constraint firstItem="ouR-jB-n8k" firstAttribute="top" secondItem="AEJ-zz-6xs" secondAttribute="bottom" constant="10" id="3c7-2H-FQh"/>
-                            <constraint firstItem="WqC-R7-2oW" firstAttribute="top" secondItem="DW8-4C-luV" secondAttribute="bottom" constant="27" id="88G-GB-boQ"/>
+                            <constraint firstItem="ouR-jB-n8k" firstAttribute="top" secondItem="AEJ-zz-6xs" secondAttribute="bottom" constant="7" id="3c7-2H-FQh"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="WqC-R7-2oW" secondAttribute="trailing" constant="144" id="4cq-vu-M7G"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="pvR-94-BNy" secondAttribute="trailing" constant="36" id="F1q-KY-gJY"/>
                             <constraint firstItem="AEJ-zz-6xs" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="47" id="GsK-7V-6Vk"/>
-                            <constraint firstItem="DW8-4C-luV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="HR9-8E-Nbe"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="WqC-R7-2oW" secondAttribute="trailing" constant="134" id="QdB-gm-OTC"/>
+                            <constraint firstItem="DW8-4C-luV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="41" id="HR9-8E-Nbe"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="WqC-R7-2oW" secondAttribute="bottom" constant="52" id="KTj-UA-aK4"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="2Ie-q7-TIQ" secondAttribute="bottom" constant="20" id="XZn-Am-8l6"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="mzD-Wd-r84" secondAttribute="bottom" constant="14" id="bF5-B0-jXe"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2Ie-q7-TIQ" secondAttribute="trailing" constant="27" id="cLx-Fp-qM9"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ouR-jB-n8k" secondAttribute="trailing" constant="41" id="dgs-ZM-kRz"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="WqC-R7-2oW" secondAttribute="bottom" constant="77" id="eLj-m7-PKl"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="DW8-4C-luV" secondAttribute="trailing" constant="41" id="fhp-BX-GgN"/>
-                            <constraint firstItem="DW8-4C-luV" firstAttribute="top" secondItem="ouR-jB-n8k" secondAttribute="bottom" constant="19" id="glh-En-hzZ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ouR-jB-n8k" secondAttribute="trailing" constant="43" id="dgs-ZM-kRz"/>
+                            <constraint firstItem="WqC-R7-2oW" firstAttribute="top" secondItem="pvR-94-BNy" secondAttribute="bottom" constant="25" id="ezw-m7-rea"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="DW8-4C-luV" secondAttribute="trailing" constant="40" id="fhp-BX-GgN"/>
+                            <constraint firstItem="DW8-4C-luV" firstAttribute="top" secondItem="ouR-jB-n8k" secondAttribute="bottom" constant="11" id="glh-En-hzZ"/>
+                            <constraint firstItem="WqC-R7-2oW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="145" id="h4T-YV-6ZB"/>
                             <constraint firstItem="mzD-Wd-r84" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="juK-Fh-AfR"/>
-                            <constraint firstItem="ouR-jB-n8k" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="oWE-50-7tS"/>
+                            <constraint firstItem="pvR-94-BNy" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="35" id="kz7-pG-7HF"/>
+                            <constraint firstItem="ouR-jB-n8k" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="38" id="oWE-50-7tS"/>
                             <constraint firstItem="AEJ-zz-6xs" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="27" id="qRC-gB-3U1"/>
-                            <constraint firstItem="WqC-R7-2oW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="133" id="tXv-GG-i0E"/>
+                            <constraint firstItem="pvR-94-BNy" firstAttribute="top" secondItem="DW8-4C-luV" secondAttribute="bottom" constant="39" id="r9d-7A-H1T"/>
+                            <constraint firstItem="DW8-4C-luV" firstAttribute="top" secondItem="ouR-jB-n8k" secondAttribute="bottom" constant="11" id="zSx-5T-3g4"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -107,18 +121,18 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="152.80000000000001" y="135.38230884557723"/>
+            <point key="canvasLocation" x="152.17391304347828" y="135.32608695652175"/>
         </scene>
         <!--Results View Controller-->
         <scene sceneID="EkB-0h-nm3">
             <objects>
                 <viewController id="6Ep-Rm-9Uq" customClass="ResultsViewController" customModule="CalHacks2019" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="aiY-QL-RaG">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This Label is for the text &quot;Congrats&quot; &quot;try again&quot; etc" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5a6-h1-k3Z">
-                                <rect key="frame" x="16" y="123" width="343" height="92"/>
+                                <rect key="frame" x="16" y="123" width="382" height="92"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="92" id="6vg-SN-91O"/>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="92" id="Qkg-HH-SP8"/>
@@ -128,7 +142,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current Score: 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Buv-gz-i59">
-                                <rect key="frame" x="16" y="557" width="343" height="44"/>
+                                <rect key="frame" x="16" y="626" width="382" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="mwT-ma-ONt"/>
                                 </constraints>
@@ -137,10 +151,10 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0hb-X1-gNj">
-                                <rect key="frame" x="16" y="223.5" width="343" height="324"/>
+                                <rect key="frame" x="16" y="223.33333333333337" width="382" height="393"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Yes" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pNS-pE-ur5">
-                                <rect key="frame" x="16" y="53" width="343" height="67"/>
+                                <rect key="frame" x="16" y="53" width="382" height="67"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="67" id="ilx-hS-pyG"/>
                                 </constraints>
